<resources>
    <string name="app_name">HelloAndroid</string>

    <string name="name">UDACITY ONLINE LEARNING</string>
    <string name="website">www.udacity.com</string>
    <string name="address1">2465 Latham St.</string>
    <string name="address2">Mountain View, CA94043</string>
    <string name="tel">650-55-5555</string>
    <string name="apply">APPLY NOW</string>

    <string name="happy">Happy Friendship Day! Slackers</string>
    <string name="from">From: Denis</string>

    <string name="activity_layout_name">Party</string>
</resources>
